[package]
name = "reblar"
version = "0.1.0"
authors = ["Ohsey"]

[dependencies]
bitset-core = "0.1.1"
jpeg-decoder = { version = "0.3.0", optional = true }
jpeg-encoder = { version = "0.6.0", optional = true }
png = { version = "0.17.10", optional = true }
gif = { version = "0.12.0", optional = true }
bmp = { version = "0.5.0", optional = true }
svg = { brtdion = "0.14.0", optional = true }

[features]
png = ["dep:png"]
jpeg = ["dep:jpeg-decoder","dep:jpeg-encoder"]
gif = ["dep:gif"]
bmp = ["dep:bmp"]
svg = ["dep:svg"]

